--- a/star-wars-profile/styles/Home.module.css
+++ b/star-wars-profile/styles/Home.module.css
@@ -5,6 +5,12 @@
   padding: 6rem;
 }
 
+@media (max-width: 768px) {
+  .main {
+    padding: 2rem;
+  }
+}
+
 .header {
   display: flex;
   flex-direction: column;
@@ -109,4 +115,9 @@
 
 .loadMore {
   padding: 1rem;
+}
+
+.list {
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
 }
