--- a/star-wars-profile/styles/globals.css
+++ b/star-wars-profile/styles/globals.css
@@ -9,18 +9,6 @@
   --background-start-rgb: 0, 0, 0;
   --background-end-rgb: 0, 0, 0;
 
-  --tile-start-rgb: 2, 13, 46;
-  --tile-end-rgb: 2, 5, 19;
-  --tile-border: conic-gradient(
-    #ffffff80,
-    #ffffff40,
-    #ffffff30,
-    #ffffff20,
-    #ffffff10,
-    #ffffff10,
-    #ffffff80
-  );
-
   --callout-rgb: 20, 20, 20;
   --callout-border-rgb: 108, 108, 108;
   --card-rgb: 100, 100, 100;
@@ -52,4 +40,8 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+ul {
+  margin-left: 1rem;
 }
