💅  STYLE: tweak styles for fact and people layout

--- a/star-wars-profile/components/Fact/Fact.module.css
+++ b/star-wars-profile/components/Fact/Fact.module.css
@@ -2,5 +2,6 @@
   border: 1px solid white;
   border-radius: 3px;
   padding: 1rem;
-  margin: 1rem 0.5rem 1rem 0;
+  min-width: 200px;
+  flex: 1;
 }
