--- a/star-wars-profile/styles/globals.css
+++ b/star-wars-profile/styles/globals.css
@@ -9,10 +9,10 @@
   --background-start-rgb: 0, 0, 0;
   --background-end-rgb: 0, 0, 0;
 
-  --callout-rgb: 20, 20, 20;
-  --callout-border-rgb: 108, 108, 108;
-  --card-rgb: 100, 100, 100;
-  --card-border-rgb: 200, 200, 200;
+  --button: 20, 20, 20;
+  --button-hover: 201, 201, 201;
+  --border: 108, 108, 108;
+  --input-border: 201, 201, 201;
 }
 
 * {
