--- a/star-wars-profile/styles/Home.module.css
+++ b/star-wars-profile/styles/Home.module.css
@@ -17,7 +17,7 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
-  padding: 1rem;
+  padding: 1rem 0;
   max-width: var(--max-width);
   width: 100%;
   z-index: 2;
@@ -32,12 +32,12 @@
   width: 100%;
   z-index: 2;
   font-family: var(--font-mono);
-  padding: 1rem;
+  padding: 1rem 0;
 }
 
 .search {
   font-family: var(--font-mono);
-  padding: 1rem;
+  padding: 1rem 0;
 }
 
 .label {
@@ -82,7 +82,8 @@
 }
 
 .person {
-  padding: 1rem 1.2rem 0;
+  padding: 1rem 0 0;
+  margin-right: 1.2rem;
   margin-bottom: 1rem;
   border-bottom: 3px solid transparent;
 }
